...
        textView.backgroundColor = .white
        textView.layer.borderColor = UIColor(white: 218.0 / 255.0, alpha: 1.0).cgColor
        textView.layer.borderWidth = 1.0
        textView.layer.cornerRadius = 18.5
        textView.font = UIFont.preferredFont(forTextStyle: .body)
        textView.clipsToBounds = true
        textView.accessibilityIdentifier = "MessageInput"
        textView.isEditable = true
        
        textView.translatesAutoresizingMaskIntoConstraints = false
        postButton.translatesAutoresizingMaskIntoConstraints = false
        addSubview(textView)
        addSubview(postButton)
...
